# span_maw_coding_test

./: AI_REFLECTION.md  CLAUDE.md  README.md  pyproject.toml
ai/-home-marcosaw-span-digital-span-maw-coding-test/: 68f23392-49ad-4da3-8a7b-e2270c86b29d.jsonl
examples/: matches_1974_75_week10.csv  standings_1974_75_week10.csv
league_table/: __init__.py  cli.py  io_csv.py  models.py  standings.py
tests/: test_cli.py  test_io_csv.py  test_standings.py
