[project]
name = "league-table"
version = "1.0.0"
description = "Compute a football league standings table from a CSV of match results."
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
league-table = "league_table.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["league_table*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7"]
